add module configuration for demo handler (#8490)
* add module configuration for demo handler

Signed-off-by: Olivier Lamy <oliver.lamy@gmail.com>